# ddgr-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  parser.rs
src/arxiv/: mod.rs  parser.rs
src/ddg/: mod.rs  parser.rs
src/mojeek/: mod.rs  parser.rs
