[package]
name = "ddgr"
version = "0.1.0"
edition = "2021"
description = "DuckDuckGo search from the terminal, in Rust"
license = "GPL-3.0"

[lib]
name = "ddgr"
path = "src/lib.rs"

[[bin]]
name = "ddgr"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toon = "0.1"
url = "2"

[dev-dependencies]
serde_json = "1"
